WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297749
Ignore DumpRenderTree when logging WebKit1 usage
https://bugs.webkit.org/show_bug.cgi?id=297749
Summary
Ignore DumpRenderTree when logging WebKit1 usage
David Kilzer (:ddkilzer)
Reported
2025-08-21 14:02:23 PDT
Ignore DumpRenderTree when logging WebKit1 usage. DumpRenderTree is expected to use WK1, so no need to log about it. <
rdar://158812344
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-21 14:02:42 PDT
<
rdar://problem/158888967
>
David Kilzer (:ddkilzer)
Comment 2
2025-08-21 20:21:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49749
David Kilzer (:ddkilzer)
Comment 3
2025-08-29 18:52:56 PDT
<
rdar://158812344
>
EWS
Comment 4
2025-08-29 22:52:40 PDT
Committed
299353@main
(6f0fc8db1d71): <
https://commits.webkit.org/299353@main
> Reviewed commits have been landed. Closing PR #49749 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug