Ignore DumpRenderTree when logging WebKit1 usage <https://bugs.webkit.org/show_bug.cgi?id=297749> <rdar://158812344>

Reviewed by Alexey Proskuryakov and Brent Fulgham.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
(WTF::CocoaApplication::isDumpRenderTree): Add.
(WTF::IOSApplication::isDumpRenderTree): Delete.
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::isDumpRenderTree): Add.
- Incorporate IOSApplication::isDumpRenderTree() and add support for
  DumpRenderTree on macOS.
- Remove long-obsolete comments about numbered DumpRenderTree.app bundle
  IDs since we start one Simulator per DumpRenderTree.app now.
(WTF::CocoaApplication::shouldOSFaultLogForAppleApplicationUsingWebKit1):
- Add lambda to make criteria easier to read.
- Disable WebKit1 logging for DumpRenderTree and TestWebKitAPI.
- Decrease probability of logging from 1/100 to 1/1000.
(WTF::IOSApplication::isDumpRenderTree): Delete.
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityWebDocumentView]):
- Update to use CocoaApplication::isDumpRenderTree().
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::needsIOSDumpRenderTreeMainFrameRenderViewLayerIsAlwaysOpaqueHack const):
- Update to use CocoaApplication::isDumpRenderTree().

Canonical link: https://commits.webkit.org/299353@main